# gyapak

./: .gitignore  .gitmodules  package-lock.json  package.json
.github/workflows/: deploy-admin-backend.yml  deploy-admin-frontend.yml
Server/: .gitignore  app.js  index.js  package-lock.json  package.json  vercel.json
Server/Utility/: ApiResponse.js  Passport.js  passportSession.js  sitemapBuilder.js  slugGenerator.js
Server/config/: database.js  env.js  express.js  supabaseClient.js  validator.js  watch.js
Server/controller/: AdmitCardController.js  admitCardController.js  auth.controller.js  categoryController.js  contactController.js  eventController.js  fetchWithFailovers.js  magazineController.js  organizationController.js  payment.controller.js  questionController.js  resultController.js  searchController.js  sitemap.controller.js  stateController.js  subscriberController.js  user.controller.js
Server/middleware/: checkPass.middleware.js  isLoggedIn.middleware.js  passport.middleware.js  validator.js
Server/models/: AuthorityModel.js  CategoryModel.js  DetailedTestResult.model.js  EventModel.js  Institutions.model.js  OrganizationModel.js  PasswordReset.model.js  PremiumCommentSection.model.js  QuestionsModel.js  SubscriberModel.js  TestAttemptRecord.model.js  currentAffairs.models.js  eventsAiEngine.Model.js  payment.model.js  resultsPdf.model.js  upcomingEvent.model.js  user.model.js
Server/routes/: admitCardRoutes.js  auth.routes.js  categoryRoutes.js  contactRoutes.js  eventRoutes.js  magazineRoutes.js  organizationRoutes.js  payment.routes.js  questionRoutes.js  resultRoutes.js  routes.js  searchRoutes.js  sitemap.routes.js  stateRoutes.js  subscriberRoutes.js  user.routes.js
adminPanel/gyapakAdminPanel/: package-lock.json  package.json
adminserver/: .env  .gitignore  Readme_SEO_DASHBOARD.txt  app.js  index.js  package-lock.json  package.json
adminserver/DB/: config.js  scheduleDeletion.js
adminserver/Jobs/: monitorSources.job.js  report-generation.js  scheduled-magazine.job.js  vectorEmbedding.job.js
ai-proctor-engine/: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  build_and_run.sh
ai-proctor-engine/include/: event_emitter.h  event_sender.h  face_detector.h  frame_queue.h  proctor_engine.h  proctor_event.h  screen_monitor.h  test.jsx  utils.h
ai-proctor-engine/server/: test.jsx
ai-proctor-engine/src/: event_emitter.cpp  event_sender.cpp  face_detector.cpp  main.cpp  proctor_engine.cpp  screen_monitor.cpp  test.jsx  utils.cpp
assets/: Authority-Bj6Qzzhs.js  ErrorPage-CvB53I3u.js  Footer-DclZH372.js  PortalCoverPage-z64Y0-Y2.js  Search-B9UuQcJJ.js  TopCategories-ByFqDLDi.js  Unsubscribe-CWhNJC1p.js  chevron-down-C27PXoqE.js  clock-BzqQaU4u.js  index-IwJ0CcE6.css  lodash-CXZMCRKK.js  map-pin-g7bjWqAm.js
gyapak-test-series/: PageLinks.jsx  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
gyapakAdminPanel/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.js
insansagov/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: main.jsx
(+605 files in other folders)
